--- a/cliente-angular/src/app/components/listar-producto/listar-producto.component.html
+++ b/cliente-angular/src/app/components/listar-producto/listar-producto.component.html
@@ -1,1 +1,42 @@
-<p>listar-producto works!</p>
+<div class="container mt-5">
+    <div class="col-lg-8 offset-2">
+        <div class="card">
+            <div class="card-body text-center">
+                <span class="titulo">Listado de Productos</span>
+                <button class="btn btn-success float-warning">Crear Producto</button>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First</th>
+                            <th scope="col">Last</th>
+                            <th scope="col">Handle</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
