--- a/cliente-angular/src/app/components/crear-producto/crear-producto.component.html
+++ b/cliente-angular/src/app/components/crear-producto/crear-producto.component.html
@@ -1,1 +1,29 @@
-<p>crear-producto works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-3">
+            <div class="card">
+                <div class="card-body">
+                    <span class="titulo">Crear Producto</span>
+                    <form class="mt-3">
+                        <div class="mb-3">
+                          <input type="text" class="form-control" id="producto" placeholder="Nombre Producto" autocomplete="off">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="categoria" placeholder="Nombre Categoria" autocomplete="off">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="ubicacion" placeholder="Nombre Ubicacion" autocomplete="off">
+                          </div>
+                      </form>
+                      <div class="mb-3">
+                        <input type="number" class="form-control" id="precio" placeholder="Precio Producto" autocomplete="off">
+                      </div>
+                      <div class="mb-3">
+                        <button class="btn btn-danger float-start" routerLink="/">Volver</button>
+                        <button type="submit" class="btn btn-warning float-end">Crear</button>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
