--- a/cliente-angular/src/app/components/listar-producto/listar-producto.component.html
+++ b/cliente-angular/src/app/components/listar-producto/listar-producto.component.html
@@ -3,15 +3,16 @@
         <div class="card">
             <div class="card-body text-center">
                 <span class="titulo">Listado de Productos</span>
-                <button class="btn btn-success float-warning">Crear Producto</button>
+                <button class="btn btn-success float-end btn-warning" routerLink="/crear-producto">Crear Producto</button>
                 <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped table-hover">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Producto</th>
+                            <th scope="col">Categoria</th>
+                            <th scope="col">Ubicacion</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col"></th>
                           </tr>
                         </thead>
                         <tbody>
@@ -20,19 +21,10 @@
                             <td>Mark</td>
                             <td>Otto</td>
                             <td>@mdo</td>
+                            <td><i class="fa-solid fa-pen-to-square"></i>
+                                <i class="fa-solid fa-trash"></i></td>
                           </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                          </tr>
+   
                         </tbody>
                       </table>
                 </div>
